--- a/public/index.html
+++ b/public/index.html
@@ -37,5 +37,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- <a target="_blank" href="https://icons8.com/icon/i6fZC6wuprSu/home">Home</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
   </body>
 </html>
